--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: ''
 subjects:
 - !lcc 'TK'
 - !lcsh 'World Wide Web'
+- GITenberg
 title: L'Internet et les langues
 url: http://www.gutenberg.org/ebooks/30423
